--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.0.1",
   "description": "French Verb and Vocab Practice Application",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.1",
     "express": "^4.10.2",
     "mongoose": "^4.10.4",
-    "socket.io": "^1.3.4",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
-    "cheerio": "^1.0.0-rc.1"
+    "socket.io": "^1.3.4",
+    "yargs": "^8.0.1"
   },
-"license": "UNLICENSED",
-"repository": {
+  "license": "UNLICENSED",
+  "repository": {
     "type": "git",
     "url": "https://github.com/jsimon1/FrancaisPourTout"
   },
@@ -21,4 +22,3 @@
   "main": "Francais Pour Tout",
   "author": "Jeremy Simon"
 }
- 
