--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.1",
   "description": "French Verb and Vocab Practice Application",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "cheerio": "^1.0.0-rc.1",
     "express": "^4.10.2",
     "mongoose": "^4.10.4",
+    "npm": "^5.7.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "socket.io": "^1.3.4",
